<resources>
    <string name="app_name">RunStep</string>
    <string name="action_settings">Settings</string>

    <string name="action_btn">btn<herf>we</herf></string>
    <string name="app_title">跑步记录中</string>
    <string name="start_trace">开始</string>
    <string name="stop_trace">停止</string>
    <string name="date">日期</string>
    <string name="fence_operator">操作</string>
    <string name="is_processed">纠偏</string>
    <string name="geo_fence">地理围栏</string>
    <string name="track_upload">轨迹追踪</string>
    <string name="track_query">历史轨迹</string>
    <string name="history_track">  查询历史轨迹</string>
    <string name="realTime_track">查询实时轨迹</string>
    <string name="set_fence">设置围栏</string>
    <string name="delete_fence">删除围栏</string>
    <string name="fence_list">围栏列表</string>
    <string name="monitored_status">监控状态</string>
    <string name="history_alarm">历史报警</string>
    <string name="delay_alarm">延迟报警</string>
    <string name="fence_name">围栏名称</string>
    <string name="fence_desc">围栏描述</string>
    <string name="fence_radius">围栏半径</string>
    <string name="select_date">选择日期</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
</resources>
