<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_setFence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/set_fence"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_monitoredStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/monitored_status"
        android:textColor="#000000"
        android:layout_below="@+id/btn_setFence"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_historyAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/history_alarm"
        android:textColor="#000000"
        android:layout_below="@+id/btn_monitoredStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_delayAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/delay_alarm"
        android:textColor="#000000"
        android:layout_below="@+id/btn_historyAlarm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>